authserver: return also error code in ValidateToken
