# pkg/authserver/authserver.swagger.json
@@ -120,6 +120,11 @@
         "user": {
           "type": "string",
           "description": "user is the authenticated username."
+        },
+        "error_code": {
+          "type": "integer",
+          "format": "int64",
+          "description": "error_code is the error code which represents the reason why given token\nis invalid."
         }
       },
       "description": "*\nValidateTokenResponse represents the response of ValidateToken."
